route.tf
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.dolfined_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "task2_public_route_table"
  }
}

resource "aws_route_table_association" "public_routetable" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public_route_table.id
}
